[gd_scene load_steps=12 format=3 uid="uid://bi0ahd7cv37i6"]

[ext_resource type="Script" path="res://microjogos/2024S1/projeto_felipe_onorio/cenas/main.gd" id="1_1yj3m"]
[ext_resource type="Script" path="res://microjogos/2024S1/projeto_felipe_onorio/cenas/Control.gd" id="1_8ao43"]
[ext_resource type="Script" path="res://microjogos/2024S1/projeto_felipe_onorio/cenas/cursor_area.gd" id="3_lmjue"]
[ext_resource type="Script" path="res://microjogos/2024S1/projeto_felipe_onorio/cenas/area_cell_0.gd" id="5_n4jon"]
[ext_resource type="Script" path="res://microjogos/2024S1/projeto_felipe_onorio/cenas/status_checker.gd" id="5_vfi3m"]
[ext_resource type="Texture2D" uid="uid://ssb2yyob2j30" path="res://microjogos/2024S1/projeto_felipe_onorio/recursos/cobblestone_path.jpg" id="6_oscpn"]
[ext_resource type="Texture2D" uid="uid://csfuxrvj5bd5c" path="res://microjogos/2024S1/projeto_felipe_onorio/recursos/titulo.png" id="7_kmapp"]
[ext_resource type="Texture2D" uid="uid://bn7wtjhmwxbby" path="res://microjogos/2024S1/projeto_felipe_onorio/recursos/instructions.png" id="8_mf117"]
[ext_resource type="SpriteFrames" uid="uid://dekn22av8ml3j" path="res://microjogos/2024S1/projeto_felipe_onorio/cenas/flame_pixely.tres" id="9_n55ik"]
[ext_resource type="AudioStream" uid="uid://mf5dgyet2u30" path="res://microjogos/2024S1/projeto_felipe_onorio/recursos/Track 2 (Party Tonight).wav" id="10_vquf2"]
[ext_resource type="Script" path="res://microjogos/2024S1/projeto_felipe_onorio/cenas/AudioStreamPlayer.gd" id="11_5i0dd"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("status_checker")]
script = ExtResource("1_1yj3m")
status_checker = NodePath("status_checker")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(954.656, 629.811)
scale = Vector2(7.00613, 7.00614)
texture = ExtResource("6_oscpn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8ao43")

[node name="status_checker" type="Node2D" parent="."]
script = ExtResource("5_vfi3m")

[node name="win_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(957, 556)
scale = Vector2(41.0625, 41.0625)
sprite_frames = ExtResource("9_n55ik")
speed_scale = 4.0

[node name="area_cell_0" type="Area2D" parent="." node_paths=PackedStringArray("right_neighbor", "down_neighbor")]
position = Vector2(724, 424)
script = ExtResource("5_n4jon")
right_neighbor = NodePath("../area_cell_1")
down_neighbor = NodePath("../area_cell_3")
row = 0
column = 0
state = 1

[node name="Cell_0_hitbox" type="CollisionShape2D" parent="area_cell_0"]

[node name="animations" type="AnimatedSprite2D" parent="area_cell_0/Cell_0_hitbox"]
position = Vector2(-2, -5)
scale = Vector2(5, 5)
speed_scale = 4.0

[node name="area_cell_1" type="Area2D" parent="." node_paths=PackedStringArray("right_neighbor", "left_neighbor", "down_neighbor")]
position = Vector2(915, 421)
script = ExtResource("5_n4jon")
right_neighbor = NodePath("../area_cell_2")
left_neighbor = NodePath("../area_cell_0")
down_neighbor = NodePath("../area_cell_4")
row = 0
column = 1
state = 2

[node name="Cell_0_hitbox" type="CollisionShape2D" parent="area_cell_1"]

[node name="animations" type="AnimatedSprite2D" parent="area_cell_1/Cell_0_hitbox"]
position = Vector2(1.99999, -2.00001)
scale = Vector2(5, 5)
speed_scale = 4.0

[node name="area_cell_2" type="Area2D" parent="." node_paths=PackedStringArray("left_neighbor", "down_neighbor")]
position = Vector2(1097, 421)
script = ExtResource("5_n4jon")
left_neighbor = NodePath("../area_cell_1")
down_neighbor = NodePath("../area_cell_5")
row = 0
column = 2

[node name="Cell_0_hitbox" type="CollisionShape2D" parent="area_cell_2"]

[node name="animations" type="AnimatedSprite2D" parent="area_cell_2/Cell_0_hitbox"]
position = Vector2(-1.52588e-05, -1.90735e-06)
scale = Vector2(5, 5)
speed_scale = 4.0

[node name="area_cell_3" type="Area2D" parent="." node_paths=PackedStringArray("right_neighbor", "up_neighbor", "down_neighbor")]
position = Vector2(726, 613)
script = ExtResource("5_n4jon")
right_neighbor = NodePath("../area_cell_4")
up_neighbor = NodePath("../area_cell_0")
down_neighbor = NodePath("../area_cell_6")
row = 1
column = 0

[node name="Cell_0_hitbox" type="CollisionShape2D" parent="area_cell_3"]

[node name="animations" type="AnimatedSprite2D" parent="area_cell_3/Cell_0_hitbox"]
position = Vector2(-5.00002, -5)
scale = Vector2(5, 5)
speed_scale = 4.0

[node name="area_cell_4" type="Area2D" parent="." node_paths=PackedStringArray("right_neighbor", "left_neighbor", "up_neighbor", "down_neighbor")]
position = Vector2(917, 610)
script = ExtResource("5_n4jon")
right_neighbor = NodePath("../area_cell_5")
left_neighbor = NodePath("../area_cell_3")
up_neighbor = NodePath("../area_cell_1")
down_neighbor = NodePath("../area_cell_7")
row = 1
column = 1
state = 1

[node name="Cell_0_hitbox" type="CollisionShape2D" parent="area_cell_4"]

[node name="animations" type="AnimatedSprite2D" parent="area_cell_4/Cell_0_hitbox"]
position = Vector2(-6.00002, -5)
scale = Vector2(5, 5)
speed_scale = 4.0

[node name="area_cell_5" type="Area2D" parent="." node_paths=PackedStringArray("left_neighbor", "up_neighbor", "down_neighbor")]
position = Vector2(1099, 610)
script = ExtResource("5_n4jon")
left_neighbor = NodePath("../area_cell_4")
up_neighbor = NodePath("../area_cell_2")
down_neighbor = NodePath("../area_cell_8")
row = 1
column = 2
state = 2

[node name="Cell_0_hitbox" type="CollisionShape2D" parent="area_cell_5"]

[node name="animations" type="AnimatedSprite2D" parent="area_cell_5/Cell_0_hitbox"]
position = Vector2(-1.52588e-05, 2)
scale = Vector2(5, 5)
speed_scale = 4.0

[node name="area_cell_6" type="Area2D" parent="." node_paths=PackedStringArray("right_neighbor", "up_neighbor")]
position = Vector2(728, 802)
script = ExtResource("5_n4jon")
right_neighbor = NodePath("../area_cell_7")
up_neighbor = NodePath("../area_cell_3")
row = 2
column = 0
state = 2

[node name="Cell_0_hitbox" type="CollisionShape2D" parent="area_cell_6"]

[node name="animations" type="AnimatedSprite2D" parent="area_cell_6/Cell_0_hitbox"]
position = Vector2(-1.00002, -3)
scale = Vector2(5, 5)
speed_scale = 4.0

[node name="area_cell_7" type="Area2D" parent="." node_paths=PackedStringArray("right_neighbor", "left_neighbor", "up_neighbor")]
position = Vector2(919, 799)
script = ExtResource("5_n4jon")
right_neighbor = NodePath("../area_cell_8")
left_neighbor = NodePath("../area_cell_6")
up_neighbor = NodePath("../area_cell_4")
row = 2
column = 1

[node name="Cell_0_hitbox" type="CollisionShape2D" parent="area_cell_7"]

[node name="animations" type="AnimatedSprite2D" parent="area_cell_7/Cell_0_hitbox"]
position = Vector2(1.99998, -1.90735e-06)
scale = Vector2(5, 5)
speed_scale = 4.0

[node name="area_cell_8" type="Area2D" parent="." node_paths=PackedStringArray("left_neighbor", "up_neighbor")]
position = Vector2(1101, 799)
script = ExtResource("5_n4jon")
left_neighbor = NodePath("../area_cell_7")
up_neighbor = NodePath("../area_cell_5")
row = 2
column = 2
state = 1

[node name="Cell_0_hitbox" type="CollisionShape2D" parent="area_cell_8"]

[node name="animations" type="AnimatedSprite2D" parent="area_cell_8/Cell_0_hitbox"]
position = Vector2(-6.00002, -5)
scale = Vector2(5, 5)
speed_scale = 4.0

[node name="cursor_area" type="Area2D" parent="." node_paths=PackedStringArray("current_cell", "status_checker")]
position = Vector2(1380, 554)
scale = Vector2(5, 5)
script = ExtResource("3_lmjue")
current_cell = NodePath("../area_cell_4")
status_checker = NodePath("../status_checker")

[node name="Cursor" type="CollisionShape2D" parent="cursor_area"]

[node name="CursorSprite" type="Sprite2D" parent="cursor_area/Cursor"]

[node name="title" type="Sprite2D" parent="."]
position = Vector2(947, 200)
scale = Vector2(7.3782, 7.3782)
texture = ExtResource("7_kmapp")

[node name="instructions" type="Sprite2D" parent="."]
position = Vector2(964, 287)
scale = Vector2(4.6875, 4.6875)
texture = ExtResource("8_mf117")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_vquf2")
script = ExtResource("11_5i0dd")

[connection signal="down_pressed" from="Control" to="cursor_area" method="_on_control_down_pressed"]
[connection signal="left_pressed" from="Control" to="cursor_area" method="_on_control_left_pressed"]
[connection signal="right_pressed" from="Control" to="cursor_area" method="_on_control_right_pressed"]
[connection signal="space_pressed" from="Control" to="cursor_area" method="_on_control_space_pressed"]
[connection signal="up_pressed" from="Control" to="cursor_area" method="_on_control_up_pressed"]
[connection signal="xxxx" from="Control" to="cursor_area" method="_on_control_xxxx"]
[connection signal="win_condition" from="cursor_area" to="." method="_on_cursor_area_win_condition"]
